k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask-container
          image: venkateshsagar/flask-app:latest
          ports:
            - containerPort: 5000
          resources:          # ✅ Add this section
            requests:
              cpu: "250m"     # requests = guaranteed minimum
              memory: "256Mi"
            limits:           # limits = maximum allowed
              cpu: "500m"
              memory: "512Mi"
